(lang dune 3.6)

(name frontmatter-extractor)

(generate_opam_files true)

(source
 (github dx3mod/frontmatter-extractor))

(authors "Mikhail Lopatin <dx3mod@bk.ru>")

(maintainers "Mikhail Lopatin <dx3mod@bk.ru>")

(license MIT)

(package
 (name frontmatter-extractor)
 (synopsis "Just frontmatter extractor")
 (depends ocaml))
